# DjangoChat

./: .gitignore  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml
account/: forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_user_is_superuser.py  0003_remove_user_is_staff_remove_user_is_superuser.py  0004_user_is_admin.py
account/templates/account/: login.html  signup.html
chat/: forms.py  models.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_room_members.py
chat/templates/chat/: create_room.html  list_rooms.html
djangoChat/: asgi.py  settings.py  urls.py  wsgi.py
static/CACHE/css/: output.594fe997aec7.css  output.ce117ad87287.css
static/src/: input.css  output.css
templates/: _base.html
