[project]
name = "djangochat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django==5.2.6",
    "django-compressor>=4.5.1",
    "django-stubs>=5.1.3",
    "dotenv>=0.9.9",
    "pillow>=11.3.0",
    "psycopg2>=2.9.10",
]
